objects/ErrorEvent__e.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <description>Error Event to log error messages.</description>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
</CustomObject>